--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
  <meta property="og:description" content="Shopwise - ang iyong online shopping partner">
  <meta property="og:image" content="https:                                                                   
  <meta property="og:url" content="https://yuzithzu.github.io/Shopwise/">
+ <title>Shopwise</title>
 </head>
 <body>
- <h1></h1>
- <p><a href="https:                          
- <img src="https://i.ibb.co/Y4yg3wm6/CEBEDA91-37-F9-48-F6-A483-3-D52-A9876-AD4.png" alt="CEBEDA91-37-F9-48-F6-A483-3-D52-A9876-AD4" border="0"></a><br />
- <a target='_blank' href='https://poetandpoem.com/analysis-of-i-carry-your-heart-with-me-by-e-e-cummings'> </a></p>
+ <h1>Shopwise</h1>
+ <p>
+ <a href="https:                                          
+ <img src="https://i.ibb.co/Y4yg3wm6/CEBEDA91-37-F9-48-F6-A483-3-D52-A9876-AD4.png" alt="CEBEDA91-37-F9-48-F6-A483-3-D52-A9876-AD4" border="0">
+ </a>
+ <br />
+ </p>
 </body>
 </html>
