--- a/index.html
+++ b/index.html
@@ -1,63 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>Utang Listahan</title>
+ <title>Shopee Link</title>
  <style>
- table {
- border-collapse: collapse;
+ body {
+ font-family: Arial, sans-serif;
+ text-align: center;
+ background-color: #f2f2f2;
  }
- th, td {
- border: 1px solid black;
- padding: 10px;
+ img {
+ width: 200px;
+ height: 200px;
+ border: 0;
+ }
+ a {
+ text-decoration: none;
+ color: #337ab7;
+ }
+ a:hover {
+ color: #23527c;
  }
  </style>
 </head>
 <body>
- <h1>Utang Listahan</h1>
- <form>
- <label for="name">Name:</label>
- <input type="text" id="name" name="name"><br><br>
- <label for="amount">Amount ng Utang:</label>
- <input type="number" id="amount" name="amount"><br><br>
- <label for="bayad">Bayad:</label>
- <input type="number" id="bayad" name="bayad"><br><br>
- <input type="button" value="Mag-input ng Bayad" onclick="calculate()">
- </form>
- <table>
- <tr>
- <th>Name</th>
- <th>Amount ng Utang</th>
- <th>Bayad</th>
- <th>Balance</th>
- </tr>
- <tr>
- <td id="name-display"></td>
- <td id="amount-display"></td>
- <td id="bayad-display"></td>
- <td id="balance-display"></td>
- </tr>
- </table>
- <button onclick="clearForm()">Clear Form</button>
- <script>
- function calculate() {
- var name = document.getElementById("name").value;
- var amount = parseFloat(document.getElementById("amount").value);
- var bayad = parseFloat(document.getElementById("bayad").value);
- var balance = amount - bayad;
- document.getElementById("name-display").innerHTML = name;
- document.getElementById("amount-display").innerHTML = amount;
- document.getElementById("bayad-display").innerHTML = bayad;
- document.getElementById("balance-display").innerHTML = balance;
- }
- function clearForm() {
- document.getElementById("name").value = "";
- document.getElementById("amount").value = "";
- document.getElementById("bayad").value = "";
- document.getElementById("name-display").innerHTML = "";
- document.getElementById("amount-display").innerHTML = "";
- document.getElementById("bayad-display").innerHTML = "";
- document.getElementById("balance-display").innerHTML = "";
- }
- </script>
+ <h1>Shopee Link</h1>
+ <p>
+ <a href="https:                                          
+ <img src="https://i.ibb.co/Y4yg3wm6/CEBEDA91-37-F9-48-F6-A483-3-D52-A9876-AD4.png" alt="CEBEDA91-37-F9-48-F6-A483-3-D52-A9876-AD4">
+ </a>
+ </p>
+ <p>
+ <a href="https://s.shopee.ph/6KqsBV9tl8" target="_blank">Click here to visit Shopee</a>
+ </p>
+ <footer>
+ <p>&copy; 2023 Shopee Link</p>
+ </footer>
 </body>
 </html>
