--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
  <title>Shopee Link</title>
+ <meta property="og:title" content="Shopee Link">
+ <meta property="og:description" content="Click here to visit Shopee">
+ <meta property="og:image" content="https:                                                                   
+ <meta property="og:url" content="https://s.shopee.ph/6KqsBV9tl8">
  <style>
  body {
  font-family: Arial, sans-serif;
