--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
  <title>Shopee Link</title>
+ <meta property="og:type" content="website">
  <meta property="og:title" content="Shopee Link">
  <meta property="og:description" content="Click here to visit Shopee">
  <meta property="og:image" content="https:                                                                   
  <meta property="og:url" content="https://s.shopee.ph/6KqsBV9tl8">
+ <meta property="og:site_name" content="Shopee Link">
  <style>
  body {
  font-family: Arial, sans-serif;
