--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
- <meta http-equiv="refresh" content="0;url=https:             
- <meta property="og:title" content="Shopee - Online Shopping">
- <meta property="og:description" content="Shop online sa Shopee!">
- <meta property="og:image" content="https://i.ibb.co/Y4yg3wm6/CEBEDA91-37-F9-48-F6-A483-3-D52-A9876-AD4.png">
- <meta property="og:url" content="https://shopee.ph">
-</head>
-<body>
-</body>
-</html>
+<meta property="name="title"" content="null" />
+<meta property="name="description"" content="null" />
+<meta property="property="og:type" content="website" />
+<meta property="property="og:url"" content="https://s.shopee.ph/3LDHslRpcY" />
+<meta property="property="og:title"" content="null" />
+<meta property="property="og:description"" content="null" />
+<meta property="property="og:image"" content="https://replug.io/images/example.png" />
+<meta property="property="twitter:card"" content="summary_large_image" />
+<meta property="property="twitter:url"" content="https://s.shopee.ph/3LDHslRpcY" />
+<meta property="property="twitter:title"" content="null" />
+<meta property="property="twitter:description"" content="null" />
+<meta property="property="twitter:image"" content="https://replug.io/images/example.png" />
