--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
-<meta property="name="title"" content="null" />
-<meta property="name="description"" content="null" />
-<meta property="property="og:type" content="website" />
-<meta property="property="og:url"" content="https://s.shopee.ph/3LDHslRpcY" />
-<meta property="property="og:title"" content="null" />
-<meta property="property="og:description"" content="null" />
-<meta property="property="og:image"" content="https://replug.io/images/example.png" />
-<meta property="property="twitter:card"" content="summary_large_image" />
-<meta property="property="twitter:url"" content="https://s.shopee.ph/3LDHslRpcY" />
-<meta property="property="twitter:title"" content="null" />
-<meta property="property="twitter:description"" content="null" />
-<meta property="property="twitter:image"" content="https://replug.io/images/example.png" />
+<!DOCTYPE html>
+<html>
+<head>
+  <meta name="title" content="Eonix Apparel" />
+  <meta name="description" content="Eonix Apparel: Elevate Your Style" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https:                            
+  <meta property="og:title" content="Eonix Apparel" />
+  <meta property="og:description" content="Eonix Apparel: Elevate Your Style" />
+  <meta property="og:image" content="https://example.com/eonix-apparel-logo.png" />
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https:                            
+  <meta property="twitter:title" content="Eonix Apparel" />
+  <meta property="twitter:description" content="Eonix Apparel: Elevate Your Style" />
+  <meta property="twitter:image" content="https://example.com/eonix-apparel-logo.png" />
+  <title>Eonix Apparel</title>
+</head>
+<body>
+</body>
+</html>
